--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "volta.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Tiny, fast library to increase speed of coding",
   "main": "volta.js",
   "directories": {
     "example": "examples"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/liamka/volta.js.git"
+    "url": "liamka/volta"
   },
   "keywords": [
     "css",
