--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,10 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "exec",
+    ".TODO",
+    "npm-debug.log",
+    "status"
   ]
 }
