--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "volta.js",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Tiny, fast library to increase speed of coding",
   "main": "volta.js",
   "directories": {
@@ -16,7 +16,10 @@
     "speed",
     "coding",
     "hint",
-    "hints"
+    "hints",
+    "bootstrap",
+    "framework",
+    "fast"
   ],
   "author": "Kirill Kotikov",
   "license": "MIT",
