--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "volta.js",
-  "version": "1.12.28",
+  "version": "2..1",
   "description": "Tiny, fast library to increase speed of coding",
   "main": "volta.js",
   "directories": {
